# tpm2_library

./: .gitignore  .gitlab-ci.yml  .woodpecker.yaml  Cargo.toml  LICENSE-MIT  Makefile  README.md  README.md.gpg
.github/workflows/: ci.yml  lint.yml  test.yml
call/: Cargo.toml
call/src/: lib.rs
cli/: Cargo.toml
cli/src/: cli.rs  crypto.rs  device.rs  lib.rs  main.rs  policy.rs
cli/src/command/: algorithms.rs  convert.rs  create_primary.rs  delete.rs  import.rs  load.rs  mod.rs  objects.rs  pcr_event.rs  pcr_read.rs  policy.rs  policy_or.rs  policy_pcr.rs  policy_secret.rs  print_error.rs  reset_lock.rs  save.rs  seal.rs  start_session.rs  unseal.rs
protocol/: Cargo.toml
protocol/src/: data.rs  lib.rs  macro.rs  message.rs  test.rs
protocol/src/data/: mod.rs  tpms.rs  tpmt.rs  tpmu.rs
protocol/tests/: runner.rs
scripts/: release.sh  rm-disallowed-comments
tpm2_call/: Cargo.toml
tpm2_call/src/: lib.rs
tpm2_cli/: Cargo.toml
tpm2_cli/src/: main.rs
tpm2_protocol/src/: buffer.rs  lib.rs  list.rs  message.rs  parameters.rs  tpmu.rs
tpm2_protocol/src/data/: enum.rs  mod.rs  tpm_rc.rs  tpma.rs  tpmi.rs  tpms.rs  tpmt.rs  tpmu.rs
tpm2_protocol/src/macro/: enum.rs  integer.rs  mod.rs  response.rs  struct.rs
tpm2_protocol/src/message/: asymmetric.rs  attached.rs  attestation.rs  audit.rs  build.rs  capability.rs  clocks_and_timers.rs  context.rs  dictionary_attack.rs  duplication.rs  enhanced_authorization.rs  ephemeral.rs  field_upgrade.rs  hierarchy.rs  integrity.rs  miscellaneous_management.rs  mod.rs  non_volatile.rs  object.rs  parse.rs  policy.rs  random_number.rs  sequence.rs  session.rs  signing.rs  startup.rs  symmetric.rs  testing.rs  vendor.rs
tpm2_protocol/tests/: runner.rs
tpm2sh/src/: tpm_stack.rs
