[package]
name = "tpm2_call"
description = "TPM 2.0 library protocol"
version = "0.4.0"
license = "MIT"
homepage = "https://codeberg.org/jarkko/tpm2_library.git"
repository = "https://codeberg.org/jarkko/tpm2_library.git.git"
edition = "2021"
rust-version = "1.78"
readme = "../README.md"

[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
strum_macros = "0.26.4"
