[package]
name = "tpm2-protocol"
description = "TPM 2.0 protocol definitions"
version = { workspace = true }
license = "MIT OR Apache-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[dev-dependencies]

[dependencies]

[[test]]
name = "runner"
path = "tests/runner.rs"
harness = false
