[package]
name = "tpm2_call"
description = "TPM 2.0 library protocol"
version = "0.2.3"
license = "MIT"
homepage = "https://gitlab.com/jarkkojs/tpm2_library"
repository = "https://gitlab.com/jarkkojs/tpm2_library.git"
edition = "2021"
rust-version = "1.78"
readme = "../README.md"

[dependencies]
strum_macros = "0.26.4"
