[package]
name = "tpm2_cli"
description = "TPM 2.0 command-line interface"
version = "0.1.3"
license = "MIT"
homepage = "https://gitlab.com/tpm2_library"
repository = "https://gitlab.com/tpm2_library.git"
edition = "2021"
rust-version = "1.78"
readme = "../README.md"

[dependencies]
tpm2_call = { path = "../tpm2_call", version = "0.1.2"  }
clap = { version = "4.0", features = ["derive"] }
clap-num = "1.1.1"
